objects/UNITY_WorkOrder_Case_Status_Values_Map__mdt.object
<CustomObject>
    <description>WorkOrder Case Status Pick List Values Map</description>
    <fields>
        <fullName>UNITY_Case_Status__c</fullName>
        <label>Case Status</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_SequenceNumber__c</fullName>
        <label>SequenceNumber</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UNITY_Service_Channel_Status__c</fullName>
        <description>The service channel status this status should map to</description>
        <label>Service Channel Status</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_WorkOrder_Status__c</fullName>
        <label>WorkOrder Status</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>WorkOrder Case Status Values Map</label>
    <pluralLabel>WorkOrder Case Status Values Map</pluralLabel>
</CustomObject>